--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,14 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="cancle">cancle</string>
     <string name="upvote">upvote</string>
+
+    <string-array name="sellarray">
+        <item>Sprayer</item>
+        <item>Weeder</item>
+        <item>Driller</item>
+        <item>Cultivator</item>
+        <item>Gardner</item>
+    </string-array>
+
+
 </resources>
